--- a/country/Argentina.html
+++ b/country/Argentina.html
@@ -127,7 +127,12 @@
                     <div class="bottom-left">AR-25613</div>
                 </a>
             </div> 
-     </div>
+        </div>
+        <nav aria-label="Page navigation example" style="padding-left: 10px; padding-top: 10px;">
+          <ul class="pagination">
+            <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+          </ul>
+        </nav>
  </div>
 </div>
 </div>
