--- a/country/Australia-3.html
+++ b/country/Australia-3.html
@@ -110,85 +110,43 @@
            <h1>Australia</h1>
            <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/australia/AU-142393.jpg" data-caption="Postcard AU-142393">
-                    <img class="img-fluid w-100" src="./../collect/australia/AU-142393.jpg" alt="Postcard AU-142393">
-                    <div class="bottom-left">AU-142393</div>
+                <a data-fancybox="gallery" href="./../collect/australia/AU-579683.jpg" data-caption="Postcard AU-579683">
+                    <img class="img-fluid w-100" src="./../collect/australia/AU-579683.jpg" alt="Postcard AU-579683">
+                    <div class="bottom-left">AU-579683</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/australia/AU-165885.jpg" data-caption="Postcard AU-165885">
-                    <img class="img-fluid w-100" src="./../collect/australia/AU-165885.jpg" alt="Postcard AU-165885">
-                    <div class="bottom-left">AU-165885</div>
+                <a data-fancybox="gallery" href="./../collect/australia/AU-613475.jpg" data-caption="Postcard AU-613475">
+                    <img class="img-fluid w-100" src="./../collect/australia/AU-613475.jpg" alt="Postcard AU-613475">
+                    <div class="bottom-left">AU-613475</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/australia/AU-227598.jpg" data-caption="Postcard AU-227598">
-                    <img class="img-fluid w-100" src="./../collect/australia/AU-227598.jpg" alt="Postcard AU-227598">
-                    <div class="bottom-left">AU-227598</div>
+                <a data-fancybox="gallery" href="./../collect/australia/AU-614716.jpg" data-caption="Postcard AU-614716">
+                    <img class="img-fluid w-100" src="./../collect/australia/AU-614716.jpg" alt="Postcard AU-614716">
+                    <div class="bottom-left">AU-614716</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/australia/AU-253834.jpg" data-caption="Postcard AU-253834">
-                    <img class="img-fluid w-100" src="./../collect/australia/AU-253834.jpg" alt="Postcard AU-253834">
-                    <div class="bottom-left">AU-253834</div>
+                <a data-fancybox="gallery" href="./../collect/australia/AU-633644.jpg" data-caption="Postcard AU-633644">
+                    <img class="img-fluid w-100" src="./../collect/australia/AU-633644.jpg" alt="Postcard AU-633644">
+                    <div class="bottom-left">AU-633644</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/australia/AU-264840.jpg" data-caption="Postcard AU-264840">
-                    <img class="img-fluid w-100" src="./../collect/australia/AU-264840.jpg" alt="Postcard AU-264840">
-                    <div class="bottom-left">AU-264840</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/australia/AU-360066.jpg" data-caption="Postcard AU-360066">
-                    <img class="img-fluid w-100" src="./../collect/australia/AU-360066.jpg" alt="Postcard AU-360066">
-                    <div class="bottom-left">AU-360066</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/australia/AU-449306.jpg" data-caption="Postcard AU-449306">
-                    <img class="img-fluid w-100" src="./../collect/australia/AU-449306.jpg" alt="Postcard AU-449306">
-                    <div class="bottom-left">AU-449306</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/australia/AU-449544.jpg" data-caption="Postcard AU-449544">
-                    <img class="img-fluid w-100" src="./../collect/australia/AU-449544.jpg" alt="Postcard AU-449544">
-                    <div class="bottom-left">AU-449544</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/australia/AU-452734.jpg" data-caption="Postcard AU-452734">
-                    <img class="img-fluid w-100" src="./../collect/australia/AU-452734.jpg" alt="Postcard AU-452734">
-                    <div class="bottom-left">AU-452734</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/australia/AU-464714.jpg" data-caption="Postcard AU-464714">
-                    <img class="img-fluid w-100" src="./../collect/australia/AU-464714.jpg" alt="Postcard AU-464714">
-                    <div class="bottom-left">AU-464714</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/australia/AU-477896.jpg" data-caption="Postcard AU-477896">
-                    <img class="img-fluid w-100" src="./../collect/australia/AU-477896.jpg" alt="Postcard AU-477896">
-                    <div class="bottom-left">AU-477896</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/australia/AU-488330.jpg" data-caption="Postcard AU-488330">
-                    <img class="img-fluid w-100" src="./../collect/australia/AU-488330.jpg" alt="Postcard AU-488330">
-                    <div class="bottom-left">AU-488330</div>
+                <a data-fancybox="gallery" href="./../collect/australia/AU-655787.jpg" data-caption="Postcard AU-655787">
+                    <img class="img-fluid w-100" src="./../collect/australia/AU-655787.jpg" alt="Postcard AU-655787">
+                    <div class="bottom-left">AU-655787</div>
                 </a>
             </div>
         </div>
         <nav aria-label="Page navigation example" style="padding-left: 10px; padding-top: 10px;">
           <ul class="pagination">
             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+            <li class="page-item"><a class="page-link" href="./Australia-2.html">Previous</a></li>
             <li class="page-item"><a class="page-link" href="./Australia.html">1</a></li>
             <li class="page-item"><a class="page-link" href="./Australia-2.html">2</a></li>
             <li class="page-item"><a class="page-link" href="./Australia-3.html">3</a></li>
-            <li class="page-item"><a class="page-link" href="./Australia-2.html">Next</a></li>
           </ul>
         </nav>
     </div>
