--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </div>
             <div class="col-md-2 col-sm-2 col-xs-3 thumb-fl">
                 <a href="./country/Azerbaijan.html">
-                    <img class="img-responsive w-100" src="./collect/azerbaijan/AZ-1989.jpg" alt="">
+                    <img class="img-responsive w-100" src="https://www.postallove.pl/var/plain_site/storage/images/pocztowki/pozdrowienia-z/pozdrowienia-z-azerbejdzanu/pozdrowienia-z-azerbejdzanu/549377-20-pol-PL/Pozdrowienia-z-Azerbejdzanu.jpg" alt="">
                     <div class="bottom-left-bg">Azerbaijan</div>
                 </a>
             </div>
