--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             </div>
             <div class="col-md-2 col-sm-2 col-xs-3 thumb-fl" style="padding-top: 10px;">
                 <a href="./country/Burkina_Faso.html">
-                    <img class="img-responsive w-100" src="./collect/burkina_faso/BF-109.jpg" alt="">
+                    <img class="img-responsive w-100" src="https://s3.dualstack.us-east-1.amazonaws.com/static2.postcrossing.com/postcard/medium/b2f2ueciu13869wi9o5ug2fwdzln5n6w.jpg" alt="">
                     <div class="bottom-left-bg">Burkina Faso</div>
                 </a>
             </div>
