--- a/country/Australia-3.html
+++ b/country/Australia-3.html
@@ -140,13 +140,13 @@
                 </a>
             </div>
         </div>
-        <nav aria-label="Page navigation example" style="padding-left: 10px; padding-top: 10px;">
+        <nav style="padding-left: 10px; padding-top: 10px;">
           <ul class="pagination">
             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
             <li class="page-item"><a class="page-link" href="./Australia-2.html">Previous</a></li>
             <li class="page-item"><a class="page-link" href="./Australia.html">1</a></li>
             <li class="page-item"><a class="page-link" href="./Australia-2.html">2</a></li>
-            <li class="page-item"><a class="page-link" href="./Australia-3.html">3</a></li>
+            <li class="page-item"><a class="page-link" href="./Australia-3.html"><b>3</b></a></li>
           </ul>
         </nav>
     </div>
