--- a/country/Belgium.html
+++ b/country/Belgium.html
@@ -181,61 +181,16 @@
                     <div class="bottom-left">BE-494512</div>
                 </a>
             </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/belgium/BE-521077.jpg" data-caption="Postcard BE-521077">
-                    <img class="img-fluid w-100" src="./../collect/belgium/BE-521077.jpg" alt="Postcard BE-521077">
-                    <div class="bottom-left">BE-521077</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/belgium/BE-553056.jpg" data-caption="Postcard BE-553056">
-                    <img class="img-fluid w-100" src="./../collect/belgium/BE-553056.jpg" alt="Postcard BE-553056">
-                    <div class="bottom-left">BE-553056</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/belgium/BE-557994.jpg" data-caption="Postcard BE-557994">
-                    <img class="img-fluid w-100" src="./../collect/belgium/BE-557994.jpg" alt="Postcard BE-557994">
-                    <div class="bottom-left">BE-557994</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/belgium/BE-557997.jpg" data-caption="Postcard BE-557997">
-                    <img class="img-fluid w-100" src="./../collect/belgium/BE-557997.jpg" alt="Postcard BE-557997">
-                    <div class="bottom-left">BE-557997</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/belgium/BE-562077.jpg" data-caption="Postcard BE-562077">
-                    <img class="img-fluid w-100" src="./../collect/belgium/BE-562077.jpg" alt="Postcard BE-562077">
-                    <div class="bottom-left">BE-562077</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/belgium/BE-566827.jpg" data-caption="Postcard BE-566827">
-                    <img class="img-fluid w-100" src="./../collect/belgium/BE-566827.jpg" alt="Postcard BE-566827">
-                    <div class="bottom-left">BE-566827</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/belgium/BE-568864.jpg" data-caption="Postcard BE-568864">
-                    <img class="img-fluid w-100" src="./../collect/belgium/BE-568864.jpg" alt="Postcard BE-568864">
-                    <div class="bottom-left">BE-568864</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/belgium/BE-582632.jpg" data-caption="Postcard BE-582632">
-                    <img class="img-fluid w-100" src="./../collect/belgium/BE-582632.jpg" alt="Postcard BE-582632">
-                    <div class="bottom-left">BE-582632</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/belgium/BE-587075.jpg" data-caption="Postcard BE-587075">
-                    <img class="img-fluid w-100" src="./../collect/belgium/BE-587075.jpg" alt="Postcard BE-587075">
-                    <div class="bottom-left">BE-587075</div>
-                </a>
-            </div>
+            
         </div>
+        <nav style="padding-left: 10px; padding-top: 10px;">
+          <ul class="pagination">
+            <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+            <li class="page-item"><a class="page-link" href="./Belgium.html"><b>1</b></a></li>
+            <li class="page-item"><a class="page-link" href="./Belgium-2.html">2</a></li>
+            <li class="page-item"><a class="page-link" href="./Belgium-2.html">Next</a></li>
+          </ul>
+        </nav>
     </div>
 </div>
 </div>
