--- a/country/Canada.html
+++ b/country/Canada.html
@@ -181,98 +181,16 @@
                     <div class="bottom-left">CA-647281</div>
                 </a>
             </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/canada/CA-689438.jpg" data-caption="Postcard CA-689438">
-                    <img class="img-fluid w-100" src="./../collect/canada/CA-689438.jpg" alt="Postcard CA-689438">
-                    <div class="bottom-left">CA-689438</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/canada/CA-689529.jpg" data-caption="Postcard CA-689529">
-                    <img class="img-fluid w-100" src="./../collect/canada/CA-689529.jpg" alt="Postcard CA-689529">
-                    <div class="bottom-left">CA-689529</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/canada/CA-698027.jpg" data-caption="Postcard CA-698027">
-                    <img class="img-fluid w-100" src="./../collect/canada/CA-698027.jpg" alt="Postcard CA-698027">
-                    <div class="bottom-left">CA-698027</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/canada/CA-723147.jpg" data-caption="Postcard CA-723147">
-                    <img class="img-fluid w-100" src="./../collect/canada/CA-723147.jpg" alt="Postcard CA-723147">
-                    <div class="bottom-left">CA-723147</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/canada/CA-775899.jpg" data-caption="Postcard CA-775899">
-                    <img class="img-fluid w-100" src="./../collect/canada/CA-775899.jpg" alt="Postcard CA-775899">
-                    <div class="bottom-left">CA-775899</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/canada/CA-792878.jpg" data-caption="Postcard CA-792878">
-                    <img class="img-fluid w-100" src="./../collect/canada/CA-792878.jpg" alt="Postcard CA-792878">
-                    <div class="bottom-left">CA-792878</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/canada/CA-803358.jpg" data-caption="Postcard CA-803358">
-                    <img class="img-fluid w-100" src="./../collect/canada/CA-803358.jpg" alt="Postcard CA-803358">
-                    <div class="bottom-left">CA-803358</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/canada/CA-812186.jpg" data-caption="Postcard CA-812186">
-                    <img class="img-fluid w-100" src="./../collect/canada/CA-812186.jpg" alt="Postcard CA-812186">
-                    <div class="bottom-left">CA-812186</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/canada/CA-822719.jpg" data-caption="Postcard CA-822719">
-                    <img class="img-fluid w-100" src="./../collect/canada/CA-822719.jpg" alt="Postcard CA-822719">
-                    <div class="bottom-left">CA-822719</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/canada/CA-824878.jpg" data-caption="Postcard CA-824878">
-                    <img class="img-fluid w-100" src="./../collect/canada/CA-824878.jpg" alt="Postcard CA-824878">
-                    <div class="bottom-left">CA-824878</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/canada/CA-827814.jpg" data-caption="Postcard CA-827814">
-                    <img class="img-fluid w-100" src="./../collect/canada/CA-827814.jpg" alt="Postcard CA-827814">
-                    <div class="bottom-left">CA-827814</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/canada/CA-854150.jpg" data-caption="Postcard CA-854150">
-                    <img class="img-fluid w-100" src="./../collect/canada/CA-854150.jpg" alt="Postcard CA-854150">
-                    <div class="bottom-left">CA-854150</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/canada/CA-854484.jpg" data-caption="Postcard CA-854484">
-                    <img class="img-fluid w-100" src="./../collect/canada/CA-854484.jpg" alt="Postcard CA-854484">
-                    <div class="bottom-left">CA-854484</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/canada/CA-895572.jpg" data-caption="Postcard CA-895572">
-                    <img class="img-fluid w-100" src="./../collect/canada/CA-895572.jpg" alt="Postcard CA-895572">
-                    <div class="bottom-left">CA-895572</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/canada/CA-904233.jpg" data-caption="Postcard CA-904233">
-                    <img class="img-fluid w-100" src="./../collect/canada/CA-904233.jpg" alt="Postcard CA-904233">
-                    <div class="bottom-left">CA-904233</div>
-                </a>
-            </div>
-
         </div>
+        <nav style="padding-left: 10px; padding-top: 10px;">
+          <ul class="pagination">
+            <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+            <li class="page-item"><a class="page-link" href="./Canada.html"><b>1</b></a></li>
+            <li class="page-item"><a class="page-link" href="./Canada-2.html">2</a></li>
+            <li class="page-item"><a class="page-link" href="./Canada-3.html">3</a></li>
+            <li class="page-item"><a class="page-link" href="./Canada-2.html">Next</a></li>
+          </ul>
+        </nav>
     </div>
 </div>
 </div>
