--- a/country/Argentina.html
+++ b/country/Argentina.html
@@ -128,13 +128,13 @@
                 </a>
             </div> 
         </div>
-        <nav aria-label="Page navigation example" style="padding-left: 10px; padding-top: 10px;">
+        <nav style="padding-left: 10px; padding-top: 10px;">
           <ul class="pagination">
-            <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
-          </ul>
+             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+         </ul>
         </nav>
- </div>
-</div>
+        </div>
+    </div>
 </div>
 
 
