--- a/country/Brazil.html
+++ b/country/Brazil.html
@@ -181,13 +181,16 @@
                     <div class="bottom-left">BR-475661</div>
                 </a>
             </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/brazil/BR-476020.jpg" data-caption="Postcard BR-476020">
-                    <img class="img-fluid w-100" src="./../collect/brazil/BR-476020.jpg" alt="Postcard BR-476020">
-                    <div class="bottom-left">BR-476020</div>
-                </a>
-            </div>
+
         </div>
+        <nav style="padding-left: 10px; padding-top: 10px;">
+          <ul class="pagination">
+            <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+            <li class="page-item"><a class="page-link" href="./Brazil.html"><b>1</b></a></li>
+            <li class="page-item"><a class="page-link" href="./Brazil-2.html">2</a></li>
+            <li class="page-item"><a class="page-link" href="./Brazil-2.html">Next</a></li>
+          </ul>
+        </nav>
     </div>
 </div>
 </div>
