--- a/country/Chile.html
+++ b/country/Chile.html
@@ -116,7 +116,12 @@
                 </a>
             </div>
         </div>
-    </div>
+        <nav style="padding-left: 10px; padding-top: 10px;">
+          <ul class="pagination">
+             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+         </ul>
+     </nav>
+ </div>
 </div>
 </div>
 
