--- a/country/Estonia.html
+++ b/country/Estonia.html
@@ -151,8 +151,12 @@
                     <div class="bottom-left">EE-257535</div>
                 </a>
             </div>
-
         </div>
+        <nav style="padding-left: 10px; padding-top: 10px;">
+          <ul class="pagination">
+             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+         </ul>
+        </nav>
     </div>
 </div>
 </div>
