--- a/country/France.html
+++ b/country/France.html
@@ -181,187 +181,18 @@
                     <div class="bottom-left">FR-589567</div>
                 </a>
             </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-633523.jpg" data-caption="Postcard FR-633523">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-633523.jpg" alt="Postcard FR-633523">
-                    <div class="bottom-left">FR-633523</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-636360.jpg" data-caption="Postcard FR-636360">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-636360.jpg" alt="Postcard FR-636360">
-                    <div class="bottom-left">FR-636360</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-658580.jpg" data-caption="Postcard FR-658580">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-658580.jpg" alt="Postcard FR-658580">
-                    <div class="bottom-left">FR-658580</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-658818.jpg" data-caption="Postcard FR-658818">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-658818.jpg" alt="Postcard FR-658818">
-                    <div class="bottom-left">FR-658818</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-663757.jpg" data-caption="Postcard FR-663757">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-663757.jpg" alt="Postcard FR-663757">
-                    <div class="bottom-left">FR-663757</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-703467.jpg" data-caption="Postcard FR-703467">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-703467.jpg" alt="Postcard FR-703467">
-                    <div class="bottom-left">FR-703467</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-705458.jpg" data-caption="Postcard FR-705458">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-705458.jpg" alt="Postcard FR-705458">
-                    <div class="bottom-left">FR-705458</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-744790.jpg" data-caption="Postcard FR-744790">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-744790.jpg" alt="Postcard FR-744790">
-                    <div class="bottom-left">FR-744790</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-753933.jpg" data-caption="Postcard FR-753933">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-753933.jpg" alt="Postcard FR-753933">
-                    <div class="bottom-left">FR-753933</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-766039.jpg" data-caption="Postcard FR-766039">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-766039.jpg" alt="Postcard FR-766039">
-                    <div class="bottom-left">FR-766039</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-770435.jpg" data-caption="Postcard FR-770435">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-770435.jpg" alt="Postcard FR-770435">
-                    <div class="bottom-left">FR-770435</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-802544.jpg" data-caption="Postcard FR-802544">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-802544.jpg" alt="Postcard FR-802544">
-                    <div class="bottom-left">FR-802544</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-812558.jpg" data-caption="Postcard FR-812558">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-812558.jpg" alt="Postcard FR-812558">
-                    <div class="bottom-left">FR-812558</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-813231.jpg" data-caption="Postcard FR-813231">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-813231.jpg" alt="Postcard FR-813231">
-                    <div class="bottom-left">FR-813231</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-849919.jpg" data-caption="Postcard FR-849919">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-849919.jpg" alt="Postcard FR-849919">
-                    <div class="bottom-left">FR-849919</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-944151.jpg" data-caption="Postcard FR-944151">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-944151.jpg" alt="Postcard FR-944151">
-                    <div class="bottom-left">FR-944151</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-958669.jpg" data-caption="Postcard FR-958669">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-958669.jpg" alt="Postcard FR-958669">
-                    <div class="bottom-left">FR-958669</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-1009827.jpg" data-caption="Postcard FR-1009827">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-1009827.jpg" alt="Postcard FR-1009827">
-                    <div class="bottom-left">FR-1009827</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-1017434.jpg" data-caption="Postcard FR-1017434">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-1017434.jpg" alt="Postcard FR-1017434">
-                    <div class="bottom-left">FR-1017434</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-1037149.jpg" data-caption="Postcard FR-1037149">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-1037149.jpg" alt="Postcard FR-1037149">
-                    <div class="bottom-left">FR-1037149</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-1041674.jpg" data-caption="Postcard FR-1041674">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-1041674.jpg" alt="Postcard FR-1041674">
-                    <div class="bottom-left">FR-1041674</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-1048599.jpg" data-caption="Postcard FR-1048599">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-1048599.jpg" alt="Postcard FR-1048599">
-                    <div class="bottom-left">FR-1048599</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-1050434.jpg" data-caption="Postcard FR-1050434">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-1050434.jpg" alt="Postcard FR-1050434">
-                    <div class="bottom-left">FR-1050434</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-1083387.jpg" data-caption="Postcard FR-1083387">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-1083387.jpg" alt="Postcard FR-1083387">
-                    <div class="bottom-left">FR-1083387</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-1092475.jpg" data-caption="Postcard FR-1092475">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-1092475.jpg" alt="Postcard FR-1092475">
-                    <div class="bottom-left">FR-1092475</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-1114740.jpg" data-caption="Postcard FR-1114740">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-1114740.jpg" alt="Postcard FR-1114740">
-                    <div class="bottom-left">FR-1114740</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-1125366.jpg" data-caption="Postcard FR-1125366">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-1125366.jpg" alt="Postcard FR-1125366">
-                    <div class="bottom-left">FR-1125366</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-1131348.jpg" data-caption="Postcard FR-1131348">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-1131348.jpg" alt="Postcard FR-1131348">
-                    <div class="bottom-left">FR-1131348</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-1134734.jpg" data-caption="Postcard FR-1134734">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-1134734.jpg" alt="Postcard FR-1134734">
-                    <div class="bottom-left">FR-1134734</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/france/FR-1177723.jpg" data-caption="Postcard FR-1177723">
-                    <img class="img-fluid w-100" src="./../collect/france/FR-1177723.jpg" alt="Postcard FR-1177723">
-                    <div class="bottom-left">FR-1177723</div>
-                </a>
-            </div>
+            
         </div>
+        <nav style="padding-left: 10px; padding-top: 10px;">
+          <ul class="pagination">
+            <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+            <li class="page-item"><a class="page-link" href="./France.html"><b>1</b></a></li>
+            <li class="page-item"><a class="page-link" href="./France-2.html">2</a></li>
+            <li class="page-item"><a class="page-link" href="./France-3.html">3</a></li>
+            <li class="page-item"><a class="page-link" href="./France-4.html">4</a></li>
+            <li class="page-item"><a class="page-link" href="./France-2.html">Next</a></li>
+          </ul>
+        </nav>
     </div>
 </div>
 </div>
