--- a/country/Greece.html
+++ b/country/Greece.html
@@ -133,8 +133,12 @@
                     <div class="bottom-left">GR-59430</div>
                 </a>
             </div>
-
         </div>
+        <nav style="padding-left: 10px; padding-top: 10px;">
+          <ul class="pagination">
+             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+         </ul>
+        </nav>
     </div>
 </div>
 </div>
