--- a/country/Iceland.html
+++ b/country/Iceland.html
@@ -128,6 +128,11 @@
                 </a>
             </div>
         </div>
+        <nav style="padding-left: 10px; padding-top: 10px;">
+          <ul class="pagination">
+             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+         </ul>
+        </nav>
     </div>
 </div>
 </div>
