--- a/country/Thailand.html
+++ b/country/Thailand.html
@@ -21,6 +21,7 @@
 
 </head>
 <body>
+<nav class="navbar navbar-expand-sm bg-light">    
 
     <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
@@ -118,29 +119,28 @@
         </div>
     </div>
     <span style="font-size:30px;cursor:pointer" onclick="openNav()">☰ open menu</span>    
-
+</nav>
 
 
     <div class="container-fluid">
-        <div class="row">
-            
-        <div class="col-md-9 col-lg-10 content-container">
-           <h1>Thailand</h1>
-           <div class="row">
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/azerbaijan/AZ-1989.jpg" data-caption="Postcard AZ-1989">
-                    <img class="img-fluid w-100" src="./../collect/azerbaijan/AZ-1989.jpg" alt="Postcard AZ-1989">
-                    <div class="bottom-left">AZ-1989</div>
-                </a>
+
+            <div class="col-md-9 col-lg-10 content-container">
+             <h1>Thailand</h1>
+             <div class="row">
+                <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                    <a data-fancybox="gallery" href="./../collect/azerbaijan/AZ-1989.jpg" data-caption="Postcard AZ-1989">
+                        <img class="img-fluid w-100" src="./../collect/azerbaijan/AZ-1989.jpg" alt="Postcard AZ-1989">
+                        <div class="bottom-left">AZ-1989</div>
+                    </a>
+                </div>
             </div>
-        </div>
-        <nav style="padding-left: 10px; padding-top: 10px;">
-          <ul class="pagination">
-           <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
-       </ul>
-   </nav>
-</div>
-</div>
+            <nav style="padding-left: 10px; padding-top: 10px;">
+              <ul class="pagination">
+                 <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+             </ul>
+         </nav>
+     </div>
+ 
 </div>
 
 
